# build-toolkit

./: .flake8  .gitignore  README.md  pyproject.toml  requirements-dev.txt
build_toolkit/: __init__.py  builder.py  cmake_configure.py  compiler.py  dashboard.py  feature.py  osarch.py  target.py  toolchain.py  utils.py
build_toolkit/templates/: dashboard.html
docs/: builder.md  os_arch.md  target.md  toolchain.md
tests/: test_cmake_configure.py  test_compiler.py  test_includes.py  test_path_vars.py  test_toolchain.py
